// Vitest Snapshot v1

exports[`calculate simulations-indépendant > acre 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: 1408 ; dirigeant . indépendant . revenu professionnel: 51980 ; dirigeant . rémunération . cotisations: 23019 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40484 ; dirigeant . rémunération . totale: 73019 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 73019 ; impôt . montant: 9516"`;

exports[`calculate simulations-indépendant > activité 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20787 ; dirigeant . rémunération . cotisations: 9086 ; dirigeant . rémunération . net: 20000 ; dirigeant . rémunération . net . après impôt: 19102 ; dirigeant . rémunération . totale: 29086 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 29086 ; impôt . montant: 898"`;

exports[`calculate simulations-indépendant > activité 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20787 ; dirigeant . rémunération . cotisations: 9102 ; dirigeant . rémunération . net: 20000 ; dirigeant . rémunération . net . après impôt: 19102 ; dirigeant . rémunération . totale: 29102 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 29102 ; impôt . montant: 898"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 52092 ; dirigeant . rémunération . cotisations: 27175 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40450 ; dirigeant . rémunération . totale: 77175 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 77175 ; impôt . montant: 9550"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 52121 ; dirigeant . rémunération . cotisations: 28236 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40442 ; dirigeant . rémunération . totale: 78236 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 78236 ; impôt . montant: 9558"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 52189 ; dirigeant . rémunération . cotisations: 30757 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40421 ; dirigeant . rémunération . totale: 80757 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 80757 ; impôt . montant: 9579"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 52041 ; dirigeant . rémunération . cotisations: 25298 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40466 ; dirigeant . rémunération . totale: 75298 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 75298 ; impôt . montant: 9534"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 52041 ; dirigeant . rémunération . cotisations: 25297 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40466 ; dirigeant . rémunération . totale: 75297 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 75297 ; impôt . montant: 9534"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 517706 ; dirigeant . rémunération . cotisations: 152221 ; dirigeant . rémunération . net: 500000 ; dirigeant . rémunération . net . après impôt: 279515 ; dirigeant . rémunération . totale: 652221 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 652221 ; impôt . montant: 220485
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 17881 ; dirigeant . rémunération . cotisations: 13181 ; dirigeant . rémunération . net: 16819 ; dirigeant . rémunération . net . après impôt: 16386 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 10000 ; entreprise . chiffre d'affaires: 40000 ; impôt . montant: 433"`;

exports[`calculate simulations-indépendant > contrats madelin 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 17881 ; dirigeant . rémunération . cotisations: 14381 ; dirigeant . rémunération . net: 15619 ; dirigeant . rémunération . net . après impôt: 15186 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 10000 ; entreprise . chiffre d'affaires: 40000 ; impôt . montant: 433"`;

exports[`calculate simulations-indépendant > contrats madelin 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20431 ; dirigeant . rémunération . cotisations: 10381 ; dirigeant . rémunération . net: 19619 ; dirigeant . rémunération . net . après impôt: 18778 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 10000 ; entreprise . chiffre d'affaires: 40000 ; impôt . montant: 841"`;

exports[`calculate simulations-indépendant > contrats madelin 4`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 13809 ; dirigeant . rémunération . cotisations: 6732 ; dirigeant . rémunération . net: 13268 ; dirigeant . rémunération . net . après impôt: 13268 ; dirigeant . rémunération . totale: 20000 ; entreprise . charges: 1000 ; entreprise . chiffre d'affaires: 21000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > contrats madelin 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 228526 ; dirigeant . rémunération . cotisations: 79617 ; dirigeant . rémunération . net: 220383 ; dirigeant . rémunération . net . après impôt: 138238 ; dirigeant . rémunération . totale: 300000 ; entreprise . charges: 15000 ; entreprise . chiffre d'affaires: 315000 ; impôt . montant: 82145
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > contrats madelin 6`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 13709 ; dirigeant . rémunération . cotisations: 6832 ; dirigeant . rémunération . net: 13168 ; dirigeant . rémunération . net . après impôt: 13168 ; dirigeant . rémunération . totale: 20000 ; entreprise . charges: 500 ; entreprise . chiffre d'affaires: 20500 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > contrats madelin 7`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 9695 ; dirigeant . rémunération . cotisations: 13132 ; dirigeant . rémunération . net: 6868 ; dirigeant . rémunération . net . après impôt: 6868 ; dirigeant . rémunération . totale: 20000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 20000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 17881 ; dirigeant . rémunération . cotisations: 13181 ; dirigeant . rémunération . net: 16819 ; dirigeant . rémunération . net . après impôt: 16386 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 30000 ; impôt . montant: 433"`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 17881 ; dirigeant . rémunération . cotisations: 14381 ; dirigeant . rémunération . net: 15619 ; dirigeant . rémunération . net . après impôt: 15186 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 30000 ; impôt . montant: 433"`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20431 ; dirigeant . rémunération . cotisations: 10381 ; dirigeant . rémunération . net: 19619 ; dirigeant . rémunération . net . après impôt: 18778 ; dirigeant . rémunération . totale: 30000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 30000 ; impôt . montant: 841"`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 13809 ; dirigeant . rémunération . cotisations: 6732 ; dirigeant . rémunération . net: 13268 ; dirigeant . rémunération . net . après impôt: 13268 ; dirigeant . rémunération . totale: 20000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 20000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 228526 ; dirigeant . rémunération . cotisations: 79617 ; dirigeant . rémunération . net: 220383 ; dirigeant . rémunération . net . après impôt: 138238 ; dirigeant . rémunération . totale: 300000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 300000 ; impôt . montant: 82145
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 225026 ; dirigeant . rémunération . cotisations: 83117 ; dirigeant . rémunération . net: 216883 ; dirigeant . rémunération . net . après impôt: 136313 ; dirigeant . rémunération . totale: 300000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 300000 ; impôt . montant: 80570
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 135 ; dirigeant . rémunération . cotisations: 1275 ; dirigeant . rémunération . net: 100 ; dirigeant . rémunération . net . après impôt: 100 ; dirigeant . rémunération . totale: 1375 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 1375 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 104 ; dirigeant . rémunération . cotisations: 144 ; dirigeant . rémunération . net: 100 ; dirigeant . rémunération . net . après impôt: 100 ; dirigeant . rémunération . totale: 244 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 244 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > exonération covid 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: 2059 ; dirigeant . indépendant . revenu professionnel: 51815 ; dirigeant . rémunération . cotisations: 21347 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40450 ; dirigeant . rémunération . totale: 71347 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 71347 ; impôt . montant: 9550"`;

exports[`calculate simulations-indépendant > exonération covid 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: 103 ; dirigeant . indépendant . revenu professionnel: 51032 ; dirigeant . rémunération . cotisations: 12977 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40685 ; dirigeant . rémunération . totale: 500 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 62977 ; impôt . montant: 9315"`;

exports[`calculate simulations-indépendant > exonération covid 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: 141 ; dirigeant . indépendant . revenu professionnel: 51440 ; dirigeant . rémunération . cotisations: 17475 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 40562 ; dirigeant . rémunération . totale: 50000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 67475 ; impôt . montant: 9438"`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 35311 ; dirigeant . rémunération . cotisations: 10908 ; dirigeant . rémunération . net: 34092 ; dirigeant . rémunération . net . après impôt: 29577 ; dirigeant . rémunération . totale: 45000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 45000 ; impôt . montant: 4515
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 72612 ; dirigeant . rémunération . cotisations: 30100 ; dirigeant . rémunération . net: 69900 ; dirigeant . rémunération . net . après impôt: 56373 ; dirigeant . rémunération . totale: 100000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 100000 ; impôt . montant: 13527
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 72612 ; dirigeant . rémunération . cotisations: 30100 ; dirigeant . rémunération . net: 69900 ; dirigeant . rémunération . net . après impôt: 56373 ; dirigeant . rémunération . totale: 100000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 100000 ; impôt . montant: 13527
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20787 ; dirigeant . rémunération . cotisations: 9086 ; dirigeant . rémunération . net: 20000 ; dirigeant . rémunération . net . après impôt: 19397 ; dirigeant . rémunération . totale: 29086 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 29086 ; impôt . montant: 603"`;

exports[`calculate simulations-indépendant > impôt sur le revenu 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 51980 ; dirigeant . rémunération . cotisations: 23019 ; dirigeant . rémunération . net: 50000 ; dirigeant . rémunération . net . après impôt: 41787 ; dirigeant . rémunération . totale: 73019 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 73019 ; impôt . montant: 8213"`;

exports[`calculate simulations-indépendant > impôt sur le revenu 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 20787 ; dirigeant . rémunération . cotisations: 9086 ; dirigeant . rémunération . net: 20000 ; dirigeant . rémunération . net . après impôt: 17921 ; dirigeant . rémunération . totale: 29086 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 29086 ; impôt . montant: 2079"`;

exports[`calculate simulations-indépendant > inversions 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 666 ; dirigeant . rémunération . cotisations: 1386 ; dirigeant . rémunération . net: 614 ; dirigeant . rémunération . net . après impôt: 614 ; dirigeant . rémunération . totale: 2000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 2000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > inversions 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 35351 ; dirigeant . rémunération . cotisations: 16004 ; dirigeant . rémunération . net: 33996 ; dirigeant . rémunération . net . après impôt: 29469 ; dirigeant . rémunération . totale: 50000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 50000 ; impôt . montant: 4527"`;

exports[`calculate simulations-indépendant > inversions 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 10394 ; dirigeant . rémunération . cotisations: 4597 ; dirigeant . rémunération . net: 10000 ; dirigeant . rémunération . net . après impôt: 10000 ; dirigeant . rémunération . totale: 14597 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 14597 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > inversions 4`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 51249 ; dirigeant . rémunération . cotisations: 22703 ; dirigeant . rémunération . net: 49297 ; dirigeant . rémunération . net . après impôt: 40000 ; dirigeant . rémunération . totale: 72000 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 72000 ; impôt . montant: 9297"`;

exports[`calculate simulations-indépendant > inversions 5`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 10394 ; dirigeant . rémunération . cotisations: 4597 ; dirigeant . rémunération . net: 10000 ; dirigeant . rémunération . net . après impôt: 10000 ; dirigeant . rémunération . totale: 14597 ; entreprise . charges: 1000 ; entreprise . chiffre d'affaires: 15597 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > inversions 6`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 13584 ; dirigeant . rémunération . cotisations: 5929 ; dirigeant . rémunération . net: 13071 ; dirigeant . rémunération . net . après impôt: 13071 ; dirigeant . rémunération . totale: 19000 ; entreprise . charges: 1000 ; entreprise . chiffre d'affaires: 20000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > inversions 7`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 12860 ; dirigeant . rémunération . cotisations: 5627 ; dirigeant . rémunération . net: 12373 ; dirigeant . rémunération . net . après impôt: 12373 ; dirigeant . rémunération . totale: 18000 ; entreprise . charges: 2000 ; entreprise . chiffre d'affaires: 20000 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 548 ; dirigeant . rémunération . cotisations: 1361 ; dirigeant . rémunération . net: 500 ; dirigeant . rémunération . net . après impôt: 500 ; dirigeant . rémunération . totale: 1861 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 1861 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 1064 ; dirigeant . rémunération . cotisations: 1466 ; dirigeant . rémunération . net: 1000 ; dirigeant . rémunération . net . après impôt: 1000 ; dirigeant . rémunération . totale: 2466 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 2466 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 1581 ; dirigeant . rémunération . cotisations: 1575 ; dirigeant . rémunération . net: 1500 ; dirigeant . rémunération . net . après impôt: 1500 ; dirigeant . rémunération . totale: 3075 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 3075 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 2097 ; dirigeant . rémunération . cotisations: 1683 ; dirigeant . rémunération . net: 2000 ; dirigeant . rémunération . net . après impôt: 2000 ; dirigeant . rémunération . totale: 3683 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 3683 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 5199 ; dirigeant . rémunération . cotisations: 2428 ; dirigeant . rémunération . net: 5000 ; dirigeant . rémunération . net . après impôt: 5000 ; dirigeant . rémunération . totale: 7428 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 7428 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 10394 ; dirigeant . rémunération . cotisations: 4597 ; dirigeant . rémunération . net: 10000 ; dirigeant . rémunération . net . après impôt: 10000 ; dirigeant . rémunération . totale: 14597 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 14597 ; impôt . montant: 0"`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 103788 ; dirigeant . rémunération . cotisations: 39589 ; dirigeant . rémunération . net: 100000 ; dirigeant . rémunération . net . après impôt: 71725 ; dirigeant . rémunération . totale: 139589 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 139589 ; impôt . montant: 28275
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"dirigeant . indépendant . cotisations et contributions . début activité: null ; dirigeant . indépendant . revenu professionnel: 1033666 ; dirigeant . rémunération . cotisations: 239948 ; dirigeant . rémunération . net: 1000000 ; dirigeant . rémunération . net . après impôt: 526695 ; dirigeant . rémunération . totale: 1239948 ; entreprise . charges: 0 ; entreprise . chiffre d'affaires: 1239948 ; impôt . montant: 473305
Notifications affichées : entreprise . TVA . franchise de TVA . seuils dépassés"
`;
